--- a/index.html
+++ b/index.html
@@ -7,47 +7,16 @@
     <title>Quiz Game</title>
     <link rel="stylesheet" href="main.css">
 </head>
-<!-- <body>
-    <div class="quiz-container" id="quiz">
-        <div class="quiz-card">
-          <h2 id="question">Question text</h2>
-          <ul>
-            <li>
-              <input type="radio" name="answer" id="a" class="answer" />
-              <label for="a" id="a_text">Question</label>
-            </li>
-            <li>
-              <input type="radio" name="answer" id="b" class="answer" />
-              <label for="b" id="b_text">Question</label>
-            </li>
-            <li>
-              <input type="radio" name="answer" id="c" class="answer" />
-              <label for="c" id="c_text">Question</label>
-            </li>
-            <li>
-              <input type="radio" name="answer" id="d" class="answer" />
-              <label for="d" id="d_text">Question</label>
-            </li>
-          </ul>
-        </div>
-        <button id="submit">Submit</button>
-      </div>   -->
-
-      <body onload="NextQuestion(0)">
+    <body onload="NextQuestion(0)">
         <main>
-            <!-- creating a modal for when quiz ends -->
             <div class="modal-container" id="score-modal">             
-                <div class="modal-content-container">                
-                    <h1>Congratulations, Quiz Completed.</h1>                
+                <div class="modal-content-container">                             
                     <div class="grade-details">
-                        <p>Attempts : 10</p>
                         <p>Wrong Answers : <span id="wrong-answers"></span></p>
                         <p>Right Answers : <span id="right-answers"></span></p>
-                        <p>Grade : <span id="grade-percentage"></span>%</p>
-                        <p ><span id="remarks"></span></p>
                     </div>               
                     <div class="modal-button-container">
-                        <button onclick="closeScoreModal()">Continue</button>
+                        <button onclick="closeScoreModal()">RESTART</button>
                     </div>               
                 </div>
             </div>  
@@ -60,38 +29,28 @@
                     <h1 id="display-question"></h1>
                 </div>  
                 <div class="game-options-container">                
-                   <div class="modal-container" id="option-modal">                   
-                        <div class="modal-content-container">
-                             <h1>Please Pick An Option</h1>                        
-                             <div class="modal-button-container">
-                                <button onclick="closeOptionModal()">Continue</button>
-                            </div>                        
-                        </div>                   
-                   </div>           
-                    <span>
-                        <input type="radio" id="option-one" name="option" class="radio" value="optionA" />
-                        <label for="option-one" class="option" id="option-one-label" onclick="handleNextQuestion()"></label>
+                    <span class="after-click">
+                        <input onclick="checkForAnswer()" type="radio" id="option-one" name="option" class="radio after-click" value="optionA" />
+                        <label for="option-one" class="option" id="option-one-label"></label>
                     </span>  
-                    <span>
-                        <input type="radio" id="option-two" name="option" class="radio" value="optionB" />
-                        <label for="option-two" class="option" id="option-two-label" onclick="handleNextQuestion()"></label>
+                    <span class="after-click">
+                        <input onclick="checkForAnswer()" type="radio" id="option-two" name="option" class="radio" value="optionB" />
+                        <label for="option-two" class="option" id="option-two-label"></label>
                     </span>
-                    <span>
-                        <input type="radio" id="option-three" name="option" class="radio" value="optionC" />
+                    <span class="after-click">
+                        <input onclick="checkForAnswer()" type="radio" id="option-three" name="option" class="radio" value="optionC" />
                         <label for="option-three" class="option" id="option-three-label"></label>
                     </span>  
-                    <span>
-                        <input type="radio" id="option-four" name="option" class="radio" value="optionD" />
+                    <span class="after-click">
+                        <input onclick="checkForAnswer()" type="radio" id="option-four" name="option" class="radio" value="optionD" />
                         <label for="option-four" class="option" id="option-four-label"></label>
                     </span>   
                 </div>  
                 <div class="next-button-container">
-                    <button onclick="handleNextQuestion()">Next Question</button>
+                    <button onclick="handleNextQuestion()">Следующий</button>
                 </div>  
             </div>
         </main>
         <script src="script.js"></script>
     </body>
-
-<!-- </body> -->
 </html>
