--- a/index.html
+++ b/index.html
@@ -9,24 +9,24 @@
 </head>
     <body onload="nextQuestion(0)">
         <main>
-            <div class="modal-container" id="score-modal">             
-                <div class="modal-content-container">                             
+            <div id="score-modal">             
+                <div class="modal-content">                             
                     <div class="grade-details">
                         <p>Верных ответов: <span id="right-answers"></span></p>
                         <p>Неверных ответов: <span id="wrong-answers"></span></p>
                     </div>               
-                    <div class="modal-button-container">
+                    <div class="restart-button">
                         <button onclick="closeScore()">ПРОЙТИ ЗАНОВО</button>
                     </div>               
                 </div>
             </div>  
-            <div id="card" class="game-quiz-container">            
-                <div class="game-question-container">
-                    <h1 id="display-question"></h1>
+            <div id="card">            
+                <div class="question">
+                    <h1 id="question-text"></h1>
                 </div>  
-                <div class="game-options-container">                
+                <div class="game-options">                
                     <span>
-                        <input onclick="checkForAnswer()" type="radio" id="option-one" name="option" class="radio after-click" value="optionA" />
+                        <input onclick="checkForAnswer()" type="radio" id="option-one" name="option" class="radio" value="optionA"/>
                         <label for="option-one" class="option" id="option-one-label"></label>
                     </span>  
                     <span class="after-click">
@@ -42,7 +42,7 @@
                         <label for="option-four" class="option" id="option-four-label"></label>
                     </span>   
                 </div>  
-                <div class="next-button-container">
+                <div class="next-button">
                     <button onclick="handleNextQuestion()">СЛЕДУЮЩИЙ</button>
                 </div>  
             </div>
